test/corpus/functions.txt
===================
Function expressions
===================

let add = (x, y) => x + y
let greet = (name) => "Hello " + name
let complex = (a, b, c) => a + b + c

---

(source_file
  (let_assignment
    (identifier)
    (function_expression
      (parameter_list
        (identifier)
        (identifier))
      (binary_expression
        (identifier)
        (identifier))))
  (let_assignment
    (identifier)
    (function_expression
      (parameter_list
        (identifier))
      (binary_expression
        (string_literal)
        (identifier))))
  (let_assignment
    (identifier)
    (function_expression
      (parameter_list
        (identifier)
        (identifier)
        (identifier))
      (binary_expression
        (binary_expression
          (identifier)
          (identifier))
        (identifier)))))

===================
Function calls
===================

let result = add(1, 2)
let greeting = greet("world")
let value = complex(1, 2, 3)

---

(source_file
  (let_assignment
    (identifier)
    (call_expression
      (identifier)
      (number)
      (number)))
  (let_assignment
    (identifier)
    (call_expression
      (identifier)
      (string_literal)))
  (let_assignment
    (identifier)
    (call_expression
      (identifier)
      (number)
      (number)
      (number))))
